components/default/home-assistant/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app home-assistant
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  annotations:
    gethomepage.dev/href: "https://hass.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/home-assistant.png
    external-dns.kubernetes.io/target: "external.${CLUSTER_DOMAIN}"
spec:
  parentRefs:
    - name: ${GATEWAY_EXTERNAL}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["hass.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: home-assistant-app
          port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app hass-code
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  annotations:
    gethomepage.dev/href: "https://hass-code.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/home-assistant.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["hass-code.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: home-assistant-codeserver
          port: 12321
